finished navigation bar/logo styling for 3 screen sizes. index.html started. known issues: text float around picture on About page. nav right-side break on larger screen sizes.

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,5 +31,5 @@ body  {
 }
 
 a {
-    font-size: smaller;
+
 }
